Bugfixing + github link

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Hitler Elo</title>
-
+    <!-- Owner: heikki.simojoki@gmail.com -->
+    <!-- https://github.com/heikki-simojoki/hitlerelo -->
     <meta name="theme-color" content="#434343">
   </head>
   <body class="sitebody">
@@ -14,6 +15,6 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    
   </body>
 </html>
